--- a/Producción 2/index.html
+++ b/Producción 2/index.html
@@ -19,14 +19,14 @@
   <body>
     <!--inicio del nav-->
     <div class="container text-center">
-      <div class="row align-items-center">
+      <div class="cols-4 row align-items-center">
         <img
           src="/images/logo-avatar.png"
-          style="width: 10%; height: auto"
+          style="width: 15%; height: auto"
           alt="Logo de avatar la leyenda de Aang"
         />
-        <div class="col">
-          <ul class="nav justify-content-center">
+        <div class="col-8">
+          <ul class="nav justify-content-center text-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
@@ -37,25 +37,32 @@
               <a class="nav-link" href="#">Datos historicos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Juego</a>
+              <a class="nav-link">Juego</a>
             </li>
           </ul>
         </div>
-        <div class="col">
-          <i class="fa-solid fa-cart-shopping"></i>
-          <i class="fa-regular fa-user"></i>
+        <div class="col-2">
+          <i class="fa-solid fa-cart-shopping fa-2x"></i>
+          <i class="fa-regular fa-user fa-2x"></i>
         </div>
       </div>
     </div>
 
     <!--Inicia el header-->
     <section>
-      <div class="card text-bg-dark">
-        <img
-          src="/images/header.jpg"
-          style="height: 90vh; width: auto"
-          alt="..."
-        />
+      <div class="card">
+        <div class="card-overlay">
+          <img
+            src="/images/map_desktop.jpg"
+            style="height: 90vh; width: 100%"
+            alt="..."
+          />
+          <img
+            src="/images/arrow.png"
+            style="height: auto; width: 30vh"
+            alt="..."
+          />
+        </div>
         <div class="card-img-overlay">
           <h1 class="text-center">Avatar: La Leyenda De Aang</h1>
         </div>
@@ -63,7 +70,7 @@
     </section>
 
     <!--Inicio de la sección número dos-->
-    <section class="margin">
+    <section class="padding" id="background-intro">
       <div class="container text-left">
         <div class="row align-items-start">
           <div class="col">
@@ -104,60 +111,65 @@
     </section>
 
     <!--Inicia la sección número tres-->
-    <section class="margin">
+    <section class="padding" id="background-reparto">
       <h2 style="text-align: center">Reparto y equipo</h2>
       <!--Cards-->
       <div class="row row-cols-1 row-cols-md-5 g-4">
         <div class="col">
           <div class="card shadow h-100">
             <img src="/images/zachtyler.png" class="card-img-top" alt="..." />
-            <div class="card-body" style="background-color: rgb(191, 71, 27);" >
-              <h5 class="card-title" style="color: white;">Zach Tyler Eisen</h5>
-              <p class="card-text" style="color: white;"> Aang </p>
+            <div class="card-body" style="background-color: rgb(191, 71, 27)">
+              <h5 class="card-title" style="color: white">Zach Tyler Eisen</h5>
+              <p class="card-text" style="color: white">Aang</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow h-100">
             <img src="/images/mae-whitman.jpg" class="card-img-top" alt="..." />
-            <div class="card-body" style="background-color: rgb(191, 71, 27);" >
-              <h5 class="card-title" style="color: white;">Mae M. Whitman</h5>
-              <p class="card-text" style="color: white;">Katara</p>
+            <div class="card-body" style="background-color: rgb(191, 71, 27)">
+              <h5 class="card-title" style="color: white">Mae M. Whitman</h5>
+              <p class="card-text" style="color: white">Katara</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow h-100">
             <img src="/images/jack-desena.jpg" class="card-img-top" alt="..." />
-            <div class="card-body" style="background-color: rgb(191, 71, 27);" >
-              <h5 class="card-title" style="color: white;">Jack DeSena</h5>
-              <p class="card-text" style="color: white;">Sokka</p>
+            <div class="card-body" style="background-color: rgb(191, 71, 27)">
+              <h5 class="card-title" style="color: white">Jack DeSena</h5>
+              <p class="card-text" style="color: white">Sokka</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow h-100">
-            <img src="/images/jessie-flower.jpg" class="card-img-top" alt="..." />
-            <div class="card-body" style="background-color: rgb(191, 71, 27);" >
-              <h5 class="card-title" style="color: white;">Jessie Flower</h5>
-              <p class="card-text" style="color: white;"> Toph </p>
+            <img
+              src="/images/jessie-flower.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body" style="background-color: rgb(191, 71, 27)">
+              <h5 class="card-title" style="color: white">Jessie Flower</h5>
+              <p class="card-text" style="color: white">Toph</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow h-100">
             <img src="/images/dante-basco.jpg" class="card-img-top" alt="..." />
-            <div class="card-body" style="background-color: rgb(191, 71, 27);" >
-              <h5 class="card-title" style="color: white;">Dante Basco</h5>
-              <p class="card-text" style="color: white;">Zuko</p>
+            <div class="card-body" style="background-color: rgb(191, 71, 27)">
+              <h5 class="card-title" style="color: white">Dante Basco</h5>
+              <p class="card-text" style="color: white">Zuko</p>
             </div>
           </div>
+        </div>
       </div>
     </section>
 
     <!--Inicio la sección número cuatro-->
-    <section class="margin">
-      <h2 style="text-align: center;">Reconocimientos</h2>
+    <section class="padding" id="background-reconociminetos">
+      <h2 style="text-align: center">Reconocimientos</h2>
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card shadow">
@@ -180,7 +192,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Mejor personaje animado en una producción de televisión</h5>
+              <h5 class="card-title">Mejor personaje animado en televisión</h5>
               <p class="card-text">Premios Annie edición 34</p>
             </div>
           </div>
@@ -206,7 +218,9 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Mejor Storyboard en una serie animada de TV</h5>
+              <h5 class="card-title">
+                Mejor Storyboard en una serie animada de TV
+              </h5>
               <p class="card-text">Premios Annie edición 33</p>
             </div>
           </div>
@@ -215,22 +229,25 @@
     </section>
 
     <!--Inicio la sección número cinco-->
-    <section class="margin">
-      <h2 style="text-align: center;">Novedades</h2>
+    <section class="padding" id="background-novedades">
+      <h2 style="color: rgb(255, 255, 255); text-align: center">Novedades</h2>
       <div class="d-flex">
-        <div class="card shadow" >
+        <div class="card shadow">
           <img src="/images/adult-avatar.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Avatar la pelicula: Se revelan personajes y edades</h5>
+            <h5 class="card-title">
+              Avatar la pelicula: Se revelan personajes y edades
+            </h5>
             <p class="card-text">
-              Conoce los personajes confirmados que participaran en la nueva pelicula de Avatar. 
+              Conoce los personajes confirmados que participaran en la nueva
+              pelicula de Avatar.
             </p>
           </div>
           <div class="card-body">
             <a href="#" class="card-link">Seguir leyendo</a>
           </div>
         </div>
-        <div class="card shadow" >
+        <div class="card shadow">
           <img
             src="/images/gordon-cormier.jpg"
             class="card-img-top"
@@ -238,19 +255,22 @@
           />
           <div class="card-body">
             <h5 class="card-title">Nueva adaptación de Netflix</h5>
-            <p class="card-text">La gigante plataforma de streaming decidio tomar el reto de traer a live action la historia de Avatar. 
+            <p class="card-text">
+              La gigante plataforma de streaming decidio tomar el reto de traer
+              a live action la historia de Avatar.
             </p>
           </div>
           <div class="card-body">
             <a href="#" class="card-link">Seguir leyendo </a>
           </div>
         </div>
-        <div class="card shadow" >
+        <div class="card shadow">
           <img src="/images/equipo-aang.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">¡El equipo Aang regresa a las pantallas!</h5>
             <p class="card-text">
-              Recientemente los directores originales de la serie confirmaron estar trabajando en una trilogiía de peliculas. 
+              Recientemente los directores originales de la serie confirmaron
+              estar trabajando en una trilogiía de peliculas.
             </p>
           </div>
           <div class="card-body">
@@ -261,19 +281,23 @@
     </section>
 
     <!--Call To Action-->
-    <section class="margin" id="background-cta">
+    <section id="background-cta">
       <div class="container text-left">
         <div class="row align-items-start">
           <div class="col">
-            <img src="/images/estado-avatar.png" alt="Aang en estado avatar" id="cta"/>
+            <img
+              src="/images/estado-avatar.png"
+              alt="Aang en estado avatar"
+              id="cta"
+            />
           </div>
           <div class="col">
-            <h2 style="color: white;">¿Estas listo para salvar el mundo?</h2>
-            <p style="color: white;">
-              Conviértete en el nuevo avatar y derrota al señor del fuego antes de que
-              sea demasiado tarde.
+            <h2 style="color: white">¿Estas listo para salvar el mundo?</h2>
+            <p style="color: white">
+              Conviértete en el nuevo avatar y derrota al señor del fuego antes
+              de que sea demasiado tarde.
             </p>
-            <button class="btn btn-primary" type="submit">Comprar ahora</button>  
+            <button class="btn btn-primary" type="submit">Comprar ahora</button>
           </div>
         </div>
       </div>
