--- a/produccion_2/index.html
+++ b/produccion_2/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Avatar: La leyenda de aang</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link href="/CSS/style.css" rel="stylesheet" type="text/css" />
+    <link href="CSS/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/0bcebe315b.js"
       crossorigin="anonymous"
@@ -22,7 +22,7 @@
       <div class="cols-3 row align-items-center">
         <div class="col-3">
           <img
-            src="/images/logo-avatar.png"
+            src="images/logo-avatar.png"
             style="width: 45%; height: auto; padding: 10px 0px 10px 0px"
             alt="Logo de avatar la leyenda de Aang"
           />
@@ -51,18 +51,18 @@
       </div>
     </div>
 
-    <!--Nav responsive-->
+    <!--Nav rsponsive-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-responsive">
       <div class="container-fluid">
-        <img
-          src="/images/logo-avatar.png"
-          style="width: 35%; height: auto; padding: 10px 0px 10px 0px"
-          alt="Logo de avatar la leyenda de Aang"
-        />
         <div>
           <i class="fa-regular fa-user fa-lg"></i>
           <i class="fa-solid fa-cart-shopping fa-lg"></i>
         </div>
+        <img
+          src="images/logo-avatar.png"
+          style="width: 35%; height: auto; padding: 10px 0px 10px 0px"
+          alt="Logo de avatar la leyenda de Aang"
+        />
         <button
           class="navbar-toggler"
           type="button"
@@ -98,13 +98,13 @@
       <div class="card">
         <div class="card-overlay">
           <img
-            src="/images/map_desktop.jpg"
+            src="images/map_desktop.jpg"
             style="height: 90vh; width: 100%"
             alt="..."
             class="image-desktop"
           />
           <img
-            src="/images/arrow.png"
+            src="images/arrow.png"
             style="height: auto; width: 30vh"
             alt="..."
             class="image-desktop"
@@ -121,13 +121,34 @@
       <div class="card">
         <div class="card-overlay">
           <img
-            src="/images/map_mobile.jpg"
+            src="images/map_mobile.jpg"
             style="height: 90vh; width: 100%"
             alt="..."
           />
           <img
-            src="/images/arrow.png"
+            src="images/arrow.png"
             style="height: auto; width: 20vh"
+            alt="..."
+          />
+        </div>
+        <div class="card-img-overlay">
+          <h1 class="text-center">Avatar: La Leyenda De Aang</h1>
+        </div>
+      </div>
+    </section>
+
+    <!--header tablet-->
+    <section class="header-tablet">
+      <div class="card">
+        <div class="card-overlay">
+          <img
+            src="images/map_tablet.jpg"
+            style="height: 90vh; width: 100%"
+            alt="..."
+          />
+          <img
+            src="images/arrow.png"
+            style="height: auto; width: 30vh"
             alt="..."
           />
         </div>
@@ -143,9 +164,10 @@
         <div class="row row-cols-1 row-cols-md-2">
           <div class="col">
             <img
-              src="/images/katara.png"
+              src="images/katara.png"
               style="width: 60%; height: auto"
               alt="katara de la tribu agua"
+              class="katara"
             />
           </div>
           <div class="col">
@@ -185,7 +207,7 @@
       <div class="row row-cols-1 row-cols-md-5 g-4">
         <div class="col">
           <div class="card shadow h-100">
-            <img src="/images/zachtyler.png" class="card-img-top" alt="..." />
+            <img src="images/zachtyler.png" class="card-img-top" alt="..." />
             <div class="card-body" style="background-color: rgb(191, 71, 27)">
               <h5 class="card-title" style="color: white">Zach Tyler Eisen</h5>
               <p class="card-text" style="color: white">Aang</p>
@@ -194,7 +216,7 @@
         </div>
         <div class="col">
           <div class="card shadow h-100">
-            <img src="/images/mae-whitman.jpg" class="card-img-top" alt="..." />
+            <img src="images/mae-whitman.jpg" class="card-img-top" alt="..." />
             <div class="card-body" style="background-color: rgb(191, 71, 27)">
               <h5 class="card-title" style="color: white">Mae M. Whitman</h5>
               <p class="card-text" style="color: white">Katara</p>
@@ -203,7 +225,7 @@
         </div>
         <div class="col">
           <div class="card shadow h-100">
-            <img src="/images/jack-desena.jpg" class="card-img-top" alt="..." />
+            <img src="images/jack-desena.jpg" class="card-img-top" alt="..." />
             <div class="card-body" style="background-color: rgb(191, 71, 27)">
               <h5 class="card-title" style="color: white">Jack DeSena</h5>
               <p class="card-text" style="color: white">Sokka</p>
@@ -213,7 +235,7 @@
         <div class="col">
           <div class="card shadow h-100">
             <img
-              src="/images/jessie-flower.jpg"
+              src="images/jessie-flower.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -225,7 +247,7 @@
         </div>
         <div class="col">
           <div class="card shadow h-100">
-            <img src="/images/dante-basco.jpg" class="card-img-top" alt="..." />
+            <img src="images/dante-basco.jpg" class="card-img-top" alt="..." />
             <div class="card-body" style="background-color: rgb(191, 71, 27)">
               <h5 class="card-title" style="color: white">Dante Basco</h5>
               <p class="card-text" style="color: white">Zuko</p>
@@ -242,7 +264,7 @@
         <div class="col">
           <div class="card shadow">
             <img
-              src="/images/reconocimiento.png"
+              src="images/reconocimiento.png"
               class="reconocimiento"
               alt="..."
             />
@@ -255,7 +277,7 @@
         <div class="col">
           <div class="card shadow">
             <img
-              src="/images/reconocimiento.png"
+              src="images/reconocimiento.png"
               class="reconocimiento"
               alt="..."
             />
@@ -268,7 +290,7 @@
         <div class="col">
           <div class="card shadow">
             <img
-              src="/images/reconocimiento.png"
+              src="images/reconocimiento.png"
               class="reconocimiento"
               alt="..."
             />
@@ -281,7 +303,7 @@
         <div class="col">
           <div class="card shadow">
             <img
-              src="/images/reconocimiento.png"
+              src="images/reconocimiento.png"
               class="reconocimiento"
               alt="..."
             />
@@ -301,7 +323,7 @@
       <h2 style="color: rgb(255, 255, 255); text-align: center">Novedades</h2>
       <div class="d-flex">
         <div class="card shadow">
-          <img src="/images/adult-avatar.jpeg" class="card-img-top" alt="..." />
+          <img src="images/adult-avatar.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">
               Avatar la pelicula: Se revelan personajes y edades
@@ -316,11 +338,7 @@
           </div>
         </div>
         <div class="card shadow">
-          <img
-            src="/images/gordon-cormier.jpg"
-            class="card-img-top"
-            alt="..."
-          />
+          <img src="images/gordon-cormier.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Nueva adaptación de Netflix</h5>
             <p class="card-text">
@@ -333,7 +351,7 @@
           </div>
         </div>
         <div class="card shadow">
-          <img src="/images/equipo-aang.jpeg" class="card-img-top" alt="..." />
+          <img src="images/equipo-aang.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">¡El equipo Aang regresa a las pantallas!</h5>
             <p class="card-text">
@@ -349,12 +367,12 @@
     </section>
 
     <!--Call To Action-->
-    <section id="background-cta">
+    <section id="cta-desktop">
       <div class="container text-left">
         <div class="row align-items-start">
           <div class="col">
             <img
-              src="/images/estado-avatar.png"
+              src="images/estado-avatar.png"
               alt="Aang en estado avatar"
               id="cta"
             />
@@ -366,6 +384,30 @@
               de que sea demasiado tarde.
             </p>
             <button class="btn btn-primary" type="submit">Comprar ahora</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Call To Action Mobile-->
+
+    <section id="cta-mobile">
+      <div class="container text-left">
+        <div class="row align-items-start">
+          <div class="col">
+            <h2 style="color: white">¿Estas listo para salvar el mundo?</h2>
+            <p style="color: white">
+              Conviértete en el nuevo avatar y derrota al señor del fuego antes
+              de que sea demasiado tarde.
+            </p>
+            <button class="btn btn-primary" type="submit">Comprar ahora</button>
+          </div>
+          <div class="col">
+            <img
+              src="images/estado-avatar.png"
+              alt="Aang en estado avatar"
+              id="cta"
+            />
           </div>
         </div>
       </div>
