Entrega del 50% (versión final)
Se agregaron animaciones al home.

--- a/produccion_2/index.html
+++ b/produccion_2/index.html
@@ -27,7 +27,6 @@
             alt="Logo de avatar la leyenda de Aang"
           />
         </div>
-
         <div class="col-6">
           <ul class="nav justify-content-center text-center">
             <li class="nav-item">
@@ -55,8 +54,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-responsive">
       <div class="container-fluid">
         <div>
-          <i class="fa-regular fa-user fa-lg"></i>
-          <i class="fa-solid fa-cart-shopping fa-lg"></i>
+          <i class="fa-regular fa-user fa-xl"></i>
+          <i class="fa-solid fa-cart-shopping fa-xl"></i>
         </div>
         <img
           src="images/logo-avatar.png"
@@ -99,7 +98,7 @@
         <div class="card-overlay">
           <img
             src="images/map_desktop.jpg"
-            style="height: 90vh; width: 100%"
+            style="height: 100vh; width: 100%"
             alt="..."
             class="image-desktop"
           />
@@ -107,7 +106,7 @@
             src="images/arrow.png"
             style="height: auto; width: 30vh"
             alt="..."
-            class="image-desktop"
+            class="animated-arrow"
           />
         </div>
         <div class="card-img-overlay">
@@ -129,6 +128,7 @@
             src="images/arrow.png"
             style="height: auto; width: 20vh"
             alt="..."
+            class="animated-arrow"
           />
         </div>
         <div class="card-img-overlay">
@@ -143,13 +143,14 @@
         <div class="card-overlay">
           <img
             src="images/map_tablet.jpg"
-            style="height: 90vh; width: 100%"
+            style="height: 100vh; width: 100%"
             alt="..."
           />
           <img
             src="images/arrow.png"
             style="height: auto; width: 30vh"
             alt="..."
+            class="animated-arrow"
           />
         </div>
         <div class="card-img-overlay">
@@ -390,7 +391,6 @@
     </section>
 
     <!--Call To Action Mobile-->
-
     <section id="cta-mobile">
       <div class="container text-left">
         <div class="row align-items-start">
